--- a/test.html
+++ b/test.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<div class="page">
-		<div class="page_content">
+		<div class="page_info">
 				<div class="header_logo">
-					<a href="#"><img src="logo.png"></a>
+					<a href="#"><img src="logo.png" id="logo"></a>
 				</div>
 				<div class="header_contact">
 					<div class="header_contact_phone">
@@ -23,13 +23,27 @@
 		<div class="header">
 			<div class="header_menu">
 				<ul class="menu_style">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Price</a></li>
-					<li><a href="#">Galery</a></li>
-					<li><a href="#">Information</a></li>
+					<li class="menu_style_dec"><a href="#" class="menu_link">Home</a></li>
+					<li class="menu_style_dec"><a href="#" class="menu_link">Price</a></li>
+					<li class="menu_style_dec"><a href="#" class="menu_link">Galery</a></li>
+					<li class="menu_style_dec"><a href="#" class="menu_link">Information</a></li>
 				</ul>
 			</div>
 		</div>
+		<div class="slider">
+			<div class="slider_lawyer" style="background-image: url(backgr.jpg);">
+			</div>
+		</div>
+		<div class="content">
+			<div class="content_photo">
+				<img src="your_photo.jpg">
+			</div>
+			<div class="content_info">
+				<h2 style="text-align: center;">Lorem Ipsum</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas mattis nibh eu bibendum eleifend. Duis et lectus mauris. Morbi nec tincidunt lorem, a lobortis purus. Duis ut risus mollis, cursus nisi ut, posuere tellus. Morbi porta eget urna in pulvinar. Morbi ut lacus at sem aliquam sagittis. Pellentesque in velit urna. Proin tristique eros nec massa aliquet tempor. Quisque eget tincidunt nisl. Proin at lacus mauris. Ut eu scelerisque quam. Maecenas tempor diam id ornare sagittis. Sed tempus mattis ex. Integer dapibus vel erat pulvinar commodo.</p>
+			</div>
+		</div>
+		<div class="footer"></div>
 	</div>
 </body>
 </html>
