Background moved to css

--- a/test.html
+++ b/test.html
@@ -31,8 +31,7 @@
 			</div>
 		</div>
 		<div class="slider">
-			<div class="slider_lawyer" style="background-image: url(backgr.jpg);">
-			</div>
+			<div class="slider_lawyer"></div>
 		</div>
 		<div class="content">
 			<div class="content_photo">
