Clearfix refactored (css, html)

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="page">
-		<div class="page_info">
+		<div class="page_info clearfix">
 			<div class="header_logo">
 				<a href="#"><img src="logo.png" id="logo"></a>
 			</div>
@@ -33,7 +33,7 @@
 		<div class="slider">
 			<div class="slider_lawyer"></div>
 		</div>
-		<div class="content">
+		<div class="content clearfix">
 			<div class="content_photo">
 				<img src="your_photo.jpg">
 			</div>
